[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/bala.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Tony-The Circle.png" type="Texture" id=3]
[ext_resource path="res://Player/Interface/interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Musicas/Jump.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 3.05164e+006

[sub_resource type="Animation" id=2]
resource_name = "Setup"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.4759, 4.97345 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( -216.78, -49.4441 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )
bala = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7.42654, -14.9537 )
scale = Vector2( 4.92308, 4.92308 )
texture = ExtResource( 3 )
offset = Vector2( 0.041954, 0.080801 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -8, -13.5 )
scale = Vector2( 1e-005, 1e-005 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Setup = SubResource( 2 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -6.48801, 16.2539 )
shape = SubResource( 3 )

[node name="Interface" parent="." instance=ExtResource( 4 )]
margin_left = 4.54063
margin_top = 36.557
margin_right = 4.54063
margin_bottom = 36.557

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
[connection signal="atualizar_vida" from="." to="Interface" method="_on_Player_atualizar_vida"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
